--- a/ipctestpilot/src/App.css
+++ b/ipctestpilot/src/App.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 
-form{
+form,#sub{
     box-sizing: border-box;
     border: px solid white;
     box-shadow: 0px 0px 15px black;
